--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,10 +1,14 @@
 #  The contact options.
 
+- type: linkedin
+  icon: "fab fa-linkedin-in"
+  url: "https://www.linkedin.com/in/nicola-bombace/"
+
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+#- type: twitter
+#  icon: "fa-brands fa-x-twitter"
 
 - type: email
   icon: "fas fa-envelope"
